# inventory

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/: CODEOWNERS
db/: schema.sql
docs/: domain-model.md  roadmap.md
docs/architecture/: state-mach-service-architecture.md
docs/plan/: implementation-plan.md  persistence-plan.md  state-mach-implementation-breakdown.md  work-breakdown.md
docs/spec/: dynamic-entity-model.md  dynamic-model-schema-mapping-requirements.md  entity-definition-format.md  persistence-requirements-overview.md  state-mach-contract-foundation.md  top-level-spec.md
models/inventory-core/: api.items.create.route.toml  api.items.delete.route.toml  (+18 more)
schemas/: entity-definition.schema.json
scripts/: docker-pipeline.sh
services/inventory-core/: Cargo.toml  Dockerfile
services/inventory-core/src/: config.rs  db.rs  handlers.rs  main.rs  models.rs  state.rs  ui.rs
services/inventory-core/src/model/: error.rs  mapping.rs  mod.rs  model.rs  orm.rs  parser.rs  raw.rs  registry.rs
services/inventory-core/src/model/tests/: mod.rs  parser_tests.rs  registry_tests.rs
services/inventory-core/src/phase1/: http.rs
services/inventory-core/src/runtime/: business.rs  contracts.rs  data.rs  events.rs  mod.rs  registry.rs  tests.rs  ui.rs
services/inventory-core/src/schema/: column.rs  data_type.rs  database.rs  ddl.rs  index.rs  meta.rs  mod.rs  primary_key.rs  schema.rs  sql.rs  table.rs  tests.rs  types.rs  vector.rs
services/inventory-core/src/schema/tests/: mod.rs
src/: index.html  main.rs
(+6 files in other folders)
