[package]
name = "inventory-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
im.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
